force-app/main/default/objects/ssot__DeviceTypeConfiguration__dlm/fields/ssot__DeviceBrowser__c.field-meta.xml
<CustomField>
    <fullName>ssot__DeviceBrowser__c</fullName>
    <label>Device Browser</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DeviceBrowser</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>