force-app/main/default/objects/ssot__DeviceTypeConfiguration__dlm/fields/ssot__DeviceCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__DeviceCategory__c</fullName>
    <label>Device Category</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DeviceCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>